apps/Django-app-v2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: Django-app-v2
  labels:
    name: Django-app-v2
    managed-by: dev-portal
