apps/Django-app-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Django-app-v2-service
  namespace: Django-app-v2
  labels:
    app: Django-app-v2
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: Django-app-v2
